Fix mvn javadoc:javadoc and checkstyle:checkstyle